--- a/apps/weapp/src/components/custom-navigation/index.scss
+++ b/apps/weapp/src/components/custom-navigation/index.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100vw;
   z-index: 9999;
-  box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.08);
+  box-shadow: none;
+  background-color: #fff;
 }
 
 .status-bar {
@@ -14,29 +15,46 @@
 .nav-content {
   position: absolute;
   box-sizing: border-box;
-  width: 100%;
+  width: 60%;
   display: flex;
   align-items: center;
-  padding: 0 16rpx;
+  left: 0;
 }
 
 .nav-search-container {
   flex: 1;
-  margin-right: 16rpx;
+  display: flex;
+  align-items: center;
+  background-color: #f5f5f5;
+  border-radius: 12rpx;
+  height: 72rpx;
+  padding: 0 24rpx;
+  margin: 0 24rpx;
+  box-sizing: border-box;
+  width: calc(100% - 48rpx);
+}
+
+.nav-search-icon {
+  margin-right: 12rpx;
+  color: #999;
+  font-size: 28rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav-search-input {
-  background: rgba(255, 255, 255, 0.9);
-  border-radius: 50rpx;
-  height: 52rpx;
-  padding-left: 16rpx;
+  flex: 1;
+  background: transparent;
+  height: 100%;
   font-size: 28rpx;
-  border: 1rpx solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.08);
-  width: 60%;
+  border: none;
+  box-shadow: none;
+  padding: 0;
   box-sizing: border-box;
 }
 
 .nav-search-input::placeholder {
   color: #999;
+  font-size: 28rpx;
 }
