--- a/apps/weapp/src/app.scss
+++ b/apps/weapp/src/app.scss
@@ -1,3 +1,5 @@
+@import 'taro-ui/dist/style/components/tag.scss';
+
 page {
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Segoe UI, Arial, Roboto, 'PingFang SC', 'miui', 'Hiragino Sans GB', 'Microsoft Yahei', sans-serif;
   background-color: #f5f5f5;
