--- a/apps/weapp/src/app.scss
+++ b/apps/weapp/src/app.scss
@@ -1,4 +1,6 @@
 @import 'taro-ui/dist/style/components/tag.scss';
+@import 'taro-ui/dist/style/components/badge.scss';
+@import 'taro-ui/dist/style/components/button.scss';
 
 page {
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Segoe UI, Arial, Roboto, 'PingFang SC', 'miui', 'Hiragino Sans GB', 'Microsoft Yahei', sans-serif;
