--- a/apps/weapp/src/app.scss
+++ b/apps/weapp/src/app.scss
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'taro-ui/dist/style/components/tag.scss';
+@import 'taro-ui/dist/style/components/badge.scss';
+@import 'taro-ui/dist/style/components/button.scss';
+@import 'taro-ui/dist/style/components/card.scss';
+@import 'taro-ui/dist/style/components/input.scss';
+@import 'taro-ui/dist/style/components/list.scss';
+@import 'taro-ui/dist/style/components/divider.scss';
+@import 'taro-ui/dist/style/components/icon.scss';
+@import 'taro-ui/dist/style/components/loading.scss';
+@import 'taro-ui/dist/style/components/toast.scss';
+@import 'taro-ui/dist/style/components/tabs.scss';
+@import 'taro-ui/dist/style/components/flex.scss';
 
 
 page {
